--- a/src/components/ContactMe/Contact_Services/Contact_Services.css
+++ b/src/components/ContactMe/Contact_Services/Contact_Services.css
@@ -5,10 +5,10 @@
     align-items: center; /* Centers content horizontally */
     background-color: #E07A5F;
     height: auto;
-    margin-left: 25px;
-    margin-right: 25px;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 40px;
-    padding: 30px 30px;
+    padding: 30px 10px;
     width: auto;
     font-size: 22px;
     text-align: center;
